<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/data"/>


  <Preference
      android:key="@string/ClearImageCacheButton"
      android:summary="@string/delete_image_cache_summary"
      android:title="@string/delete_image_cache_title"/>

  <Preference
    android:key="@string/ClearCacheButton"
    android:summary="@string/delete_cache_summary"
    android:title="@string/delete_cache_chapters"/>

  <Preference
    android:key="@string/ClearHistoryButton"
    android:summary="@string/clear_history_summary"
    android:title="@string/clear_history"/>

  <Preference
    android:key="@string/ClearProgressButton"
    android:summary="@string/clear_progress_summary"
    android:title="@string/clear_progress"/>

  <Preference
    android:key="@string/ClearReadChapterButton"
    android:summary="@string/clear_last_chapter_summary"
    android:title="@string/clear_last_chapter"/>

  <Preference
    android:key="@string/ClearLocalFavButton"
    android:summary="@string/delete_favorite_ranobes_summary"
    android:title="@string/delete_favorite_ranobes"/>


</PreferenceScreen>
