<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="20dp"
  android:orientation="vertical">

  <!-- Email Label -->
  <TextView
    android:id="@+id/tV_login_emailLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/login_email"/>

  <!-- Email input text -->
  <EditText
    android:id="@+id/eT_login_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login"
    android:importantForAutofill="no"
    android:inputType="text|textEmailAddress"
    android:maxLines="1"/>

  <!-- Password Label -->
  <!--<TextView-->
    <!--android:id="@+id/tV_login_passLabel"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/password"-->
    <!--/>-->

  <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:passwordToggleContentDescription="@string/description"
    app:passwordToggleEnabled="true">
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/eT_login_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"/>
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/tV_login_resultLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    tools:text="@tools:sample/lorem"
    tools:textColor="@color/colorAccent"
    tools:visibility="visible"

    />


</LinearLayout>