<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="@dimen/nav_header_height"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:background="@drawable/side_nav_bar"
  android:gravity="bottom"
  android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:contentDescription="@string/contentDescription_Logo"
        app:srcCompat="@mipmap/ic_launcher"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/premium"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/navText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:paddingTop="@dimen/nav_header_vertical_spacing"
      android:textColor="@android:color/black"/>
    <ImageButton
      android:id="@+id/vkButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="?attr/selectableItemBackground"
      android:clickable="true"
      android:contentDescription="@string/vk"
      app:srcCompat="@drawable/ic_vk"
      android:focusable="true"/>
  </LinearLayout>

</LinearLayout>
