<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font" />

        <Spinner
            android:id="@+id/spinner_reading_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/font" />

    </LinearLayout>

    <Switch
        android:id="@+id/switch_reading_day_night"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day_night" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size" />

        <SeekBar
            android:id="@+id/seekBar_reading_fontsize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="30"
            android:progress="1" />

        <TextView
            android:id="@+id/textView_reading_fontsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text Color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eT_chooseColor_webviewText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fffffff"
            android:digits="0,1,2,3,4,5,6,7,8,9,a,b,c,d,e,f,A,B,C,D,E,F"
            android:inputType="text"
            android:maxLines="1"/>


        <Button
            android:id="@+id/btn_chooseColor_webviewText"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=""/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Background Color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eT_chooseColor_webviewBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fffffff"
            android:digits="0,1,2,3,4,5,6,7,8,9,a,b,c,d,e,f,A,B,C,D,E,F"
            android:inputType="text"
            android:maxLines="1"/>


        <Button
            android:id="@+id/btn_chooseColor_webviewBackground"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=""/>


    </LinearLayout>

</LinearLayout>